[project]
name = "metrics-agent"
description = "An agent to send metrics from a script to a database"
dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "tomli >= 1.1.0 ; python_version < '3.11'",
  "fast-influxdb-client @ git+https://github.com/davidson-engineering/fast-influxdb-client.git@v1.1.3",
  "buffered @ git+https://github.com/davidson-engineering/buffered.git@v1.0.0",
  "network-simple @ git+https://github.com/generalmattza/network-simple.git@v1.0.2",
  "application-metrics @ git+https://github.com/generalmattza/application-metrics.git@v0.0.1",
  "custom-logging @ git+https://github.com/davidson-engineering/python-custom-logging.git@v1.0.2",
]
# [tool.setuptools]
# packages = ["metrics_agent"]

# If a module, then use fetch version from src/module_name/__init__.py
[tool.setuptools.dynamic]
version = { attr = "metrics_agent.__version__" }

[project.optional-dependencies]
test = ["pytest >= 7.4.4"]

[project.urls]
homepage = "https://davidson.engineering"
repository = "https://github.com/davidson-engineering/metrics-agent"
# documentation = "https://readthedocs.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
