[project]
name = "metrics-manager"
description = "A manager to collect, process and store metrics from a network of data nodes."
version = "0.0.1"

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  # "pandas>=2.2.0",
  # "pyarrow>=15.0.0",
  # "tomli >= 1.1.0 ; python_version < '3.11'",
  "fast-database-clients @ git+https://github.com/davidson-engineering/fast-database-clients.git@v2.0.1",
  "buffered @ git+https://github.com/davidson-engineering/buffered.git@v1.0.0",
  "network-simple @ git+https://github.com/generalmattza/network-simple.git@v1.0.2",
  "application-metrics @ git+https://github.com/generalmattza/application-metrics.git@v0.0.1",
  "data-node-network @ git+https://github.com/davidson-engineering/data-node-network.git",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
test = ["pytest >= 8.0.0"]

[project.urls]
homepage = "https://davidson.engineering"
repository = "https://github.com/davidson-engineering/metrics-manager"
# documentation = "https://readthedocs.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
